# openttd-map

./: .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml  pages.yml
app/: layout.tsx  page.tsx
app/components/: home-page.tsx  loadGraph.tsx  map.tsx  transit-graph.tsx
app/model/: savefile-model.ts
model/: coordinates.ts
pages/: file-picker.tsx  index.tsx
savegame-reader/: Cargo.toml  test-big.sav  test.sav  test_busy_map.sav  test_empty_map.sav.decoded  test_v196.sav
savegame-reader/src/: base_readers.rs  common.rs  header.rs  lib.rs  loader.rs  save_file.rs  table_reader.rs
savegame-reader/tests/: web.rs
