[package]
name = "savegame-reader"
version = "0.1.0"
authors = ["Andreas Hässler <andreas.haessler@outlook.at>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

liblzma = { version = "0.3.2", features = ["wasm"] }
